cmake_minimum_required (VERSION 3.8)
project(project_PyroProgression)
add_subdirectory(CWSDK)
add_library (PyroProgression SHARED "main.cpp" "src/XPOverwrite.h"  "src/LevelDisplayOverwrite.h" "src/utility.h" "src/utility.cpp" "src/GearScalingOverWrite.h" "src/GoldDropOverWrite.h" "src/RegionTextDrawOverwrite.h")
target_link_libraries (PyroProgression LINK_PUBLIC CWSDK)